# local-live-voice-translator

./: README.md  app.py  pyproject.toml
core/: faster_whisper.py  handler.py  kokoro.py
