[project]
name = "local-live-voice-translator"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastrtc[stt]>=0.0.19",
    "kokoro-onnx==0.4.7",
    "loguru>=0.7.3",
    "ollama>=0.4.7",
    "faster-whisper>=1.1.1",
    "misaki[ja]",
    "misaki[zh]",
    "torch>=2.4.1",
    "torchaudio>=2.4.1"
]

# Specific versions of torch, and torchaudio are installed based on the extra feature
[project.optional-dependencies]
cpu = ["torch>=2.4.1", "torchaudio>=2.4.1"]
cu124 = ["torch>=2.4.1", "torchaudio>=2.4.1"]

[tool.uv]
conflicts = [[{ extra = "cpu" }, { extra = "cu124" }]]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu124", extra = "cu124" },
]
torchaudio = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu124", extra = "cu124" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true